@@ -8,6 +8,7 @@ Version 1.68
 	Added Resharper directories to .gitignore file.
 	Added recursive submode commands. When cloning a submodule containing nested submodules, all nested submodules can be initialized. There are also recursive initialize, update and synchronize commands added to the submodule menu.
 	Added checkout branch to the revision graph context menu.
+	When adding a remote repository the remote branches can be configured automaticly.
 
 Version 1.67
 	Fixed exception when AutoCRLF is left empty
